@@ -82,6 +82,19 @@ public class ClientUtils
     }
     return doc;
   }
+
+  /**
+   * @param SolrInputDocument to convert
+   * @return a SolrDocument with the same fields and values as the SolrInputDocument
+   */
+  public static SolrDocument toSolrDocument( SolrInputDocument d )
+  {
+    SolrDocument doc = new SolrDocument();
+    for( SolrInputField field : d ) {
+      doc.setField( field.getName(), field.getValue() );
+    }
+    return doc;
+  }
   
   //------------------------------------------------------------------------
   //------------------------------------------------------------------------
